@@ -1,4 +1,5 @@
 v0.13
+	* FIX : Splitted roads not added to Relation (fixes #1586)
 	* FIX : Tweaked windows menu to be "standard"
 	* ADD : Splash screen
 	* ADD : Styles dock + list of styles in "Tools-Styles" for quick style switching. As a consequence, a directory must be defined in the preferences where all custom styles will be stored.
